# BitPlanes

./: ComputeDs.h  IC_LK _pseudocode.cpp  README.md  Test.h  lukaskanade.h
LK_IC/: main.cpp
Modules/ReadVideo/: CMakeLists.txt  main.cpp
Modules/WarpImage/: CMakeLists.txt  main.cpp  test.h  warpA.h
Modules/ds2H/: main  main.cpp
Modules/getBitPlanes/: main  main.cpp
Modules/make_rect/: Makefile  main  main.cpp
examplecodes/LK_IC/: CMakeLists.txt
examplecodes/LK_IC_Similarity/: main.cpp
finalcode/: CMakeLists.txt  ComputeDs.h  InverseWarp.h  RunLucasKanade.h  Test.h  ds2H.h  generateBitplanes.h  getParameters.h  gradient.h  imageFunctions.h  imwarp.h  lucaskanade.h  lukaskanade.h  main.cpp  matrixFunctions.h  padImages.h  readImage.h  readVideo.h  runLucasKanadeWithCamera.h  warpCoordinates.h
finalcode_mac/: ComputeDs.h  RunLucasKanade.h  Test.h  lucaskanade.h  main.cpp  matrixFunctions.h  readImage.h  warpCoordinates.h
matlab/: LucasKanadeAffine.m
matlab/LukasKanade/: ComputeDs.m  DrawImage.m  InverseWarpCoords.m  LukasKanade.m  RunLukasKanade.m  ds2H.m  getparameters.m  padimages.m  rect2box.m
matlab/LukasKanadeBitPlanes/: ComputeDs.m  DrawImage.m  InverseWarpCoords.m  LukasKanade.m  RunLukasKanade.m  WarpBitPlane.m  ds2H.m  getparameters.m  padbitPlanesimages.m  padimages.m  warpA.m
matlab/Test/: LucasKanadeInverseCompositional.m
matlab/bitPlanes/: ComputeCostPerPixel.m  LucasKanade.m  LucasKanade2.m  generateBitPlanes.m
