cmake_minimum_required(VERSION 3.5)
project(WarpImage)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main.cpp warpA.h test.h)
add_executable(WarpImage ${SOURCE_FILES})
find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIR})
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(WarpImage ${OpenCV_LIBS})